--- a/job1/templates/jobs.yaml
+++ b/job1/templates/jobs.yaml
@@ -14,4 +14,5 @@ spec:
             - "bin/bash"
             - "-c"
             - "for i in 9 8 7 6 5 4 3 2 1 ; do echo $i ; done"
+            - "abc"
       restartPolicy: Never
