--- a/job1/templates/jobs.yaml
+++ b/job1/templates/jobs.yaml
@@ -3,6 +3,9 @@ kind: Job
 metadata:
   name: countdown
 spec:
+  completions: 1
+  parallelism: 1
+  backoffLimit: 2
   template:
     metadata:
       name: countdown
