--- a/job1/templates/jobs.yaml
+++ b/job1/templates/jobs.yaml
@@ -17,5 +17,5 @@ spec:
             - "bin/bash"
             - "-c"
             - "for i in 9 8 7 6 5 4 3 2 1 ; do echo $i ; done"
-            - "exit 125"
+            - "exissssst 125"
       restartPolicy: Never
