--- a/job1/templates/deploy.yaml
+++ b/job1/templates/deploy.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: nginx-project
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: nginx-project
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:1.17.3
+          image: nginx:latest
           ports:
             - containerPort: 80
