--- a/job1/templates/jobs.yaml
+++ b/job1/templates/jobs.yaml
@@ -3,8 +3,8 @@ kind: Job
 metadata:
   name: "indexed-job"
 spec:
-  completions: 5
-  parallelism: 3
+  completions: 1
+  parallelism: 1
   template:
     spec:
       restartPolicy: Never
@@ -26,9 +26,10 @@ spec:
           command:
             - "rev"
             - "/input/data.txt"
+            - sleep 20m
           volumeMounts:
             - mountPath: /input
-              name: inputx
+              name: input
       volumes:
         - name: input
           emptyDir: {}
