--- a/job1/templates/jobs.yaml
+++ b/job1/templates/jobs.yaml
@@ -26,7 +26,7 @@ spec:
           command:
             - "rev"
             - "/input/data.txt"
-            - sleep 20m
+            # - sleep 20m
           volumeMounts:
             - mountPath: /input
               name: input
