--- a/job1/templates/jobs.yaml
+++ b/job1/templates/jobs.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "jobb"
+  name: "jobc"
 spec:
   completions: 1
   parallelism: 1
@@ -14,7 +14,6 @@ spec:
           command:
             - "bash"
             - "-c"
-            - sleep 20m
             - |
               items=(foo bar baz qux xyz)
               echo ${items[$JOB_COMPLETION_INDEX]} > /input/data.txt
