--- a/nginxapp2/templates/apache.yaml
+++ b/nginxapp2/templates/apache.yaml
@@ -2,14 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apache
-  labels: apache
+  labels:
+    name: webserver
 spec:
   replicas: 1
   selector:
-    matchLabels: apache
+    matchLabels:
+      name: webserver
   template:
     metadata:
-      labels: apache
+      labels:
+        name: webserver
     spec:
       containers:
         - name: apache
