--- a/nginxapp2/templates/apache.yaml
+++ b/nginxapp2/templates/apache.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: apache
           image: httpd:2.4.62
-          imagePullPolicy: always
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 80
