--- a/tenant1app/templates/test1.yaml
+++ b/tenant1app/templates/test1.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "test1"
   labels:
     name: "test1"
-  annotations:
-    "helm.sh/hook": test
+  # annotations:
+  #   "helm.sh/hook": test
 spec:
   containers:
     - name: wget
