--- a/tenant1app/templates/tests/test2.yaml
+++ b/tenant1app/templates/tests/test2.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "test2"
   labels:
     name: "test2"
-  # annotations:
-  #   "helm.sh/hook": test
+  annotations:
+    "helm.sh/hook": test
 spec:
   containers:
     - name: wget
